# bot-apis

./: .env.example  .gitignore  Dockerfile  README.md  bot-api.Dockerfile  pyproject.toml  relay-server.Dockerfile  requirements.txt  run.py  run_apps.py  start.sh
.github/workflows/: docker-build-bot-api.yml  docker-build.yml  poetry-update.yml
.idx/: dev.nix
bot-api/: README.md  __main__.py  pyproject.toml  requirements.txt
bot-api/app/: auth.py  binders.py  config.py  main.py  models.py  services.py  settings.py  settings.yaml
bot-api/app/controllers/: binds.py  restrictions.py  users.py
bot-api/app/lib/: binds.py  restrictions.py
relay-server/: __main__.py  pyproject.toml
relay-server/app/: base.py  bloxlink.py  config.py  decorators.py  redis.py  types.py
relay-server/app/endpoints/: cache_lookup.py  stats.py  verification.py  verifyall.py
relay-server/app/events/: guild_join.py  guild_remove.py  member_ban.py  member_join.py  member_unban.py  ready.py
relay-server/app/web/: server.py
src/apps/bot-api/: README.md  pyproject.toml  requirements.txt
src/apps/bot-api/src/: config.example.py  main.py  middleware.py
src/apps/bot-api/src/resources/: binds.py  database.py  models.py  roblox_group.py  roblox_user.py  secrets.py  utils.py
src/apps/bot-api/src/routes/binds/: [user_id].py  roles.py
src/apps/bot-api/src/routes/nickname/: parse.py
src/apps/bot-api/src/routes/restrictions/: evaluate.py
src/apps/bot-api/src/routes/update/: [user_id].py
src/apps/discord-gateway-relay/: Dockerfile  LICENSE  README.md  pyproject.toml  requirements.txt
src/apps/discord-gateway-relay/src/: config.py.example  main.py
src/apps/discord-gateway-relay/src/resources/: ipc.py  secrets.py  utils.py
src/apps/discord-gateway-relay/src/resources/endpoints/: cache_lookup.py  identify.py  information.py  verifyall.py
src/apps/discord-gateway-relay/src/resources/modules/: discord.py  redis.py
src/apps/roblox-info-server/: Dockerfile  README.md  pyproject.toml  requirements.txt
src/apps/roblox-info-server/src/: config.py  constants.py  main.py
src/apps/roblox-info-server/src/resources/: fetch.py
src/apps/roblox-info-server/src/routes/roblox/: info.py
src/apps/roblox-info-server/src/utilities/: sentry_utils.py
