[tool.poetry]
name = "bot-api"
version = "0.1.0"
description = ""
authors = ["Bloxlink <oss@blox.link>"]
license = "AGPL 3.0"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
sanic = "22.12.0"
aiohttp = "3.8.5"
motor = "2.5.1"
hiredis = "^2.2.3"
redis = "~4.2"
requests = "^2.31.0"
websockets = "<11.0"
pymongo = { version = "3.12", extras = ["srv"] }
attrs = "23.1.0"

[tool.poetry.group.dev.dependencies]
black = "^23.7.0"
isort = "^5.12.0"
pylint = "^3.0.1"

[tool.black]
line_length = "110"

[tool.isort]
profile = "black"

[tool.pylint]
max-line-length = 110
disable = ["C0413", "C0103", "C0114", "C0301", "W1203"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
