[tool.poetry]
name = "discord-gateway-relay"
version = "0.1.0"
description = ""
authors = ["Bloxlink <oss@blox.link>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
discord-py = {git = "https://github.com/Bloxlink-Labs/discord.py"}
psutil = "5.9.0"
python-dateutil = "2.8.2"
redis = "4.6.0"
hiredis = "2.2.3"
async-timeout = "4.0.2"

[tool.poetry.group.dev.dependencies]
black = "^23.7.0"
isort = "^5.12.0"

[tool.black]
line_length = "110"

[tool.isort]
profile = "black"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
