[tool.poetry]
name = "roblox-info-server"
version = "0.1.0"
description = ""
authors = ["Bloxlink <oss@blox.link>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
cchardet = "2.1.7"
aiodns = "3.0.0"
sanic = "^23.6.0"
aiohttp = "3.8.1"
python-dateutil = "2.8.2"
sentry-sdk = "^1.39.1"


[tool.poetry.group.dev.dependencies]
black = "^23.7.0"
isort = "^5.12.0"

[tool.black]
line_length = "110"

[tool.isort]
profile = "black"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
